--- a/app/assets/style.css
+++ b/app/assets/style.css
@@ -84,3 +84,40 @@ img {
   display: flex;
   justify-content: space-between;
 }
+
+.post-page {
+  margin: 1rem auto;
+  padding: 1rem;
+  width: 80%;
+  background-color: #eceff1;
+}
+
+.post-page > aside {
+  margin: auto;
+  width: 60%;
+  text-align: center;
+}
+
+.post-page > hr {
+  border: thin solid #cfd8dc
+}
+
+.post-page > time {
+  margin: 1rem auto;
+  display: block;
+}
+
+.post-page > article { padding: 0 2rem }
+
+.post-page figure,
+.post-page img,
+.post-page audio,
+.post-page iframe,
+.post-page video {
+  margin: 1rem auto;
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+  align-items: center;
+  max-width: 100%;
+}
